--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,18 +6,13 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-hr {
-  background-color: whitesmoke;
-}
-
 nav .brand-logo {
   cursor: default;
   padding-left: 10px;
-  /* color: #6a98fc; */
 }
 
-#sidenav {
-  background-color: red;
+#sidebar {
+  height: 100%;
 }
 
 #content {
