--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,18 +21,19 @@ nav .brand-logo {
 }
 
 #main-content {
-  padding-left: 300px;
+  padding-top: 5px;
+  margin-left: 360px;
+  min-height: 89vh;
 }
 
-.flex {
+/* .flex {
   display: flex;
   flex-wrap: wrap;
   min-height: 100vh;
-}
+} */
 
-#landing {
+.landing-text {
  color: #161616; 
- font-size: 9em;
  font-weight: bolder;
 }
 
