added color coding

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,10 +23,6 @@ code {
   display: none;
 }
 
-.show {
-  display: block;
-}
-
 .fixed {
   position: fixed;
 }
@@ -41,12 +37,6 @@ code {
   margin-left: 360px;
   min-height: 89vh;
 }
-
-/* .flex {
-  display: flex;
-  flex-wrap: wrap;
-  min-height: 100vh;
-} */
 
 .landing-text {
  color: #161616; 
@@ -68,35 +58,30 @@ nav .nav-wrapper {
   text-align: center;
 }
 
-/* dark black #101010 */
-/* ------------------------------------------------------------------- colors */
-/* #85bcfa */
-/* #e4d836 */
-/* #9f86ff */
-/* #e64759 */
-/* #1bc98e */
-/* #434857 */
-
-.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
-    background-color: #6a98fc !important;
+.ddl-blue {
+  background-color: #6a98fc !important;
 }
 
-.btn-warning, .btn-warning:hover, .btn-warning:active, .btn-warning:visited {
-    background-color: #e4d836 !important;
+.ddl-yellow {
+  background-color: #e4d836 !important;
 }
 
-.btn-purple, .btn-purple:hover, .btn-purple:active, .btn-purple:visited {
-    background-color: #9f86ff !important;
+.ddl-purple {
+  background-color: #9f86ff !important;
 }
 
-.btn-danger, .btn-danger:hover, .btn-danger:active, .btn-danger:visited {
-    background-color: #e64759 !important;
+.ddl-red {
+  background-color: #e64759 !important;
 }
 
-.btn-success, .btn-success:hover, .btn-success:active, .btn-success:visited {
-    background-color: #1bc98e !important;
+.ddl-green {
+  background-color: #1bc98e !important;
 }
 
-.btn-info, .btn-info:hover, .btn-info:active, .btn-info:visited {
-    background-color: #434857 !important;
+.ddl-grey {
+  background-color: #434857 !important;
+}
+
+.ddl-black {
+  background-color: #101010 !important;
 }
