--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,7 +64,7 @@ nav .nav-wrapper {
 }
 
 #toast-container {
-  background-color: #64b5f6;
+  background-color: #6a98fc;
   top: auto !important;
   right: auto !important;
   bottom: 2%;
