adding datalist module

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -122,3 +122,7 @@ nav .nav-wrapper {
 .ddl-dark-grey-text {
   color: #434857 !important;
 }
+
+/* .col {
+  border: 1px dashed red !important;
+} */
