--- a/static/css/main.css
+++ b/static/css/main.css
@@ -134,7 +134,7 @@ nav .nav-wrapper {
 }
 
 .ddl-transparent {
-  background-color: transparent !important;
+  background-color: rgba(0,0,0,0.3) !important;
   outline: solid 1px whitesmoke;
 }
 
