--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,6 +23,11 @@ code {
   color: #64b5f6;
 }
 
+.comment {
+  background-color: rgba(0,0,0,0.3);
+  border-radius: 10px;
+}
+
 .sub-text {
   font-size: .75em;
 }
