--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,9 +23,10 @@ code {
   color: #64b5f6;
 }
 
-.comment {
+.well {
   background-color: rgba(0,0,0,0.3);
-  border-radius: 10px;
+  border-radius: 5px;
+  margin-top: 15px;
 }
 
 .sub-text {
