--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,10 @@ hr {
   outline-color: #64b5f6;
 }
 
+#modal-docs ul {
+  padding-left: 3em;
+}
+
 nav .brand-logo {
   cursor: default;
   padding-left: 10px;
