--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,16 +1,33 @@
 body {
-  background-color: #1e1e1e;
-  color: whitesmoke;
   margin: 0;
   padding: 0;
+  background-color: #1e1e1e;
+  color: whitesmoke;
   font-family: 'Montserrat', sans-serif;
 }
 
 hr {
-  /* border-color: #49494F; */
   height: 10px;
 	border: 0;
 	box-shadow: 0 10px 10px -10px #49494F inset;
+}
+
+nav .brand-logo {
+  cursor: default;
+  padding-left: 10px;
+}
+
+nav .nav-wrapper {
+  background-color: #2f2f33 !important;
+}
+
+code {
+  color: #64b5f6;
+}
+
+[type="checkbox"]:checked+span:not(.lever):before {
+  border-right: 2px solid #6a98fc;
+  border-bottom: 2px solid #6a98fc;
 }
 
 .sidenav-overlay {
@@ -36,15 +53,6 @@ hr {
 
 #modal-docs ul {
   padding-left: 3em;
-}
-
-nav .brand-logo {
-  cursor: default;
-  padding-left: 10px;
-}
-
-code {
-  color: #64b5f6;
 }
 
 .well {
@@ -77,10 +85,6 @@ li.tooltipped:hover span {
   background-color: #2f2f33;
   min-height: 100vh;
 }
-#side-bar-legend {
-  margin-left: 10px;
-  margin-right: 10px;
-}
 
 #main-content {
   padding-top: 5px;
@@ -91,10 +95,6 @@ li.tooltipped:hover span {
 #landing-text {
  color: #161616; 
  font-weight: bolder;
-}
-
-nav .nav-wrapper {
-  background-color: #2f2f33 !important;
 }
 
 #toast-container {
@@ -122,6 +122,7 @@ nav .nav-wrapper {
   padding-right: 10px;
 }
 
+/* ------------------------------------------------------------------ colors */
 .ddl-blue {
   background-color: #6a98fc !important;
 }
@@ -174,13 +175,4 @@ nav .nav-wrapper {
 .ddl-transparent {
   background-color: rgba(0,0,0,0.3) !important;
   outline: solid 1px whitesmoke;
-}
-
-/* .col {
-  border: 1px dashed red !important;
-} */
-
-[type="checkbox"]:checked+span:not(.lever):before {
-  border-right: 2px solid #6a98fc;
-  border-bottom: 2px solid #6a98fc;
 }
